[gd_scene load_steps=13 format=3 uid="uid://bmx0b2qjwg5qs"]

[ext_resource type="PackedScene" uid="uid://d3kokyyr1wofd" path="res://scenes/gui/agent_map_select_menu/selectable_icon.tscn" id="1_d2hxs"]
[ext_resource type="Script" path="res://scenes/gui/agent_map_select_menu/agent_map_select_menu.gd" id="1_gqp1f"]
[ext_resource type="PackedScene" uid="uid://c20gsp31nhvle" path="res://scenes/gui/agent_map_select_menu/selectable_icon_container.tscn" id="2_65f5a"]
[ext_resource type="Texture2D" uid="uid://ecmsy1mgpexj" path="res://assets/images/player_icons/catboy_icon.png" id="3_6b11k"]
[ext_resource type="Texture2D" uid="uid://csmwg6i5yhc3v" path="res://assets/images/player_icons/bunny_icon.png" id="4_6p6bf"]
[ext_resource type="Texture2D" uid="uid://d3ewysjfwwqoc" path="res://assets/images/player_icons/madoka_icon.png" id="6_sj46f"]
[ext_resource type="Texture2D" uid="uid://58yiomfwk20f" path="res://assets/images/gui/agent_map_select_menu/agent_map_select_ready_temp.png" id="6_ymf22"]
[ext_resource type="Texture2D" uid="uid://dnen6ckq0k0si" path="res://assets/images/gui/agent_map_select_menu/agent_map_select_ready_disabled_temp.png" id="7_thd02"]
[ext_resource type="Texture2D" uid="uid://goxq3gdjdqri" path="res://assets/images/player_icons/sandy_icon.png" id="7_xalc7"]
[ext_resource type="Texture2D" uid="uid://bhfckpvhkqk6v" path="res://assets/images/map_icons/map_1.png" id="8_7utji"]
[ext_resource type="Texture2D" uid="uid://djy0a4yaym8dx" path="res://assets/images/map_icons/map_2.png" id="9_2664i"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_esc81"]
bg_color = Color(0, 0, 0, 1)

[node name="AgentMapSelectMenu" type="Control"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gqp1f")

[node name="RotationContainer" type="Control" parent="."]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -640.0
offset_right = 640.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(640, 360)

[node name="PanelContainer" type="PanelContainer" parent="RotationContainer"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.325
anchor_right = 0.525
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(128, 400)

[node name="MarginContainer" type="MarginContainer" parent="RotationContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 200

[node name="AgentIconContainer" parent="RotationContainer/PanelContainer/MarginContainer" instance=ExtResource("2_65f5a")]
layout_mode = 2

[node name="bunny" parent="RotationContainer/PanelContainer/MarginContainer/AgentIconContainer" instance=ExtResource("1_d2hxs")]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="RotationContainer/PanelContainer/MarginContainer/AgentIconContainer/bunny"]
z_as_relative = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("4_6p6bf")
expand_mode = 1
stretch_mode = 5

[node name="catboy" parent="RotationContainer/PanelContainer/MarginContainer/AgentIconContainer" instance=ExtResource("1_d2hxs")]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="RotationContainer/PanelContainer/MarginContainer/AgentIconContainer/catboy"]
z_as_relative = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("3_6b11k")
expand_mode = 1
stretch_mode = 5

[node name="madoka" parent="RotationContainer/PanelContainer/MarginContainer/AgentIconContainer" instance=ExtResource("1_d2hxs")]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="RotationContainer/PanelContainer/MarginContainer/AgentIconContainer/madoka"]
z_as_relative = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("6_sj46f")
expand_mode = 1
stretch_mode = 5

[node name="sandy" parent="RotationContainer/PanelContainer/MarginContainer/AgentIconContainer" instance=ExtResource("1_d2hxs")]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="RotationContainer/PanelContainer/MarginContainer/AgentIconContainer/sandy"]
z_as_relative = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("7_xalc7")
expand_mode = 1
stretch_mode = 5

[node name="PanelContainer2" type="PanelContainer" parent="RotationContainer"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.525
anchor_right = 0.675
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(128, 400)
theme_override_styles/panel = SubResource("StyleBoxFlat_esc81")

[node name="MarginContainer" type="MarginContainer" parent="RotationContainer/PanelContainer2"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="MapIconContainer" parent="RotationContainer/PanelContainer2/MarginContainer" instance=ExtResource("2_65f5a")]
layout_mode = 2
height_to_width_ratio = 2.0
columns = 1

[node name="map_1" parent="RotationContainer/PanelContainer2/MarginContainer/MapIconContainer" instance=ExtResource("1_d2hxs")]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="RotationContainer/PanelContainer2/MarginContainer/MapIconContainer/map_1"]
z_as_relative = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("8_7utji")
expand_mode = 1
stretch_mode = 4

[node name="map_2" parent="RotationContainer/PanelContainer2/MarginContainer/MapIconContainer" instance=ExtResource("1_d2hxs")]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="RotationContainer/PanelContainer2/MarginContainer/MapIconContainer/map_2"]
z_as_relative = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("9_2664i")
expand_mode = 1
stretch_mode = 5

[node name="map_3" parent="RotationContainer/PanelContainer2/MarginContainer/MapIconContainer" instance=ExtResource("1_d2hxs")]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="RotationContainer/PanelContainer2/MarginContainer/MapIconContainer/map_3"]
z_as_relative = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("9_2664i")
expand_mode = 1
stretch_mode = 5

[node name="ReadyButton" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.325781
anchor_top = 0.898611
anchor_right = 0.675781
anchor_bottom = 1.00139
grow_horizontal = 2
grow_vertical = 2
disabled = true
texture_normal = ExtResource("6_ymf22")
texture_disabled = ExtResource("7_thd02")
stretch_mode = 6
metadata/_edit_use_anchors_ = true

[connection signal="icon_selected" from="RotationContainer/PanelContainer/MarginContainer/AgentIconContainer" to="." method="_on_agent_icon_container_icon_selected"]
[connection signal="icon_selected" from="RotationContainer/PanelContainer2/MarginContainer/MapIconContainer" to="." method="_on_map_icon_container_icon_selected"]
[connection signal="pressed" from="ReadyButton" to="." method="_on_ready_button_pressed"]
